Upload the logos

--- a/beamercolorthemeTIMOZER.sty
+++ b/beamercolorthemeTIMOZER.sty
@@ -127,7 +127,7 @@
 \setbeamercolor*{block body}{fg = black, bg = gray!20}
 
 % itemize/enumrate(body, subbody, subsubbody), description body
-\setbeamercolor*{item}{fg=black}
+\setbeamercolor*{item}{fg=maincolor}
 \setbeamercolor*{item projected}{fg=black, bg=gray!20}
 %\setbeamercolor*{enumrate item}{fg=white, bg=black}
 %\setbeamercolor{enumrate subitem}{}
