更新说明文档

--- a/main.tex
+++ b/main.tex
@@ -118,6 +118,14 @@
             \end{block}
         \end{frame}
 
+    \section{已知问题}
+            \begin{frame}[fragile]{已知问题}
+            在引入一些代码的时候会出现编译问题. 目前发现的语言有 \texttt{TeX}, 和一些使用~\% 来进行注释的语言.
+
+            表现形式: 在 \texttt{TeX} 的代码中, 不能使用一些环境结束语, 比如 \verb|\end{frame}| .
+
+            代码中不能使用~\% 符号来作为注释开始符号.
+        \end{frame}
     \section{致谢}
         \begin{frame}{致谢}
             首先感谢 Beamer 文档类的作者. 
