--- a/main.tex
+++ b/main.tex
@@ -117,6 +117,19 @@
                 2018年 2月 5日 星期一 12时32分51秒 CST
             \end{block}
         \end{frame}
+        \begin{frame}{Version 0.2}
+            \begin{block}{Version 0.2}
+                2018年 3月12日 星期一 21时42分15秒 CST
+                \begin{itemize}
+                    \item 添加 gif 动画支持;
+                    \item 将数学字体改为 rmdefault;
+                    \item 添加 email 命令;
+                    \item 添加 ttanns 命令;
+                    \item 增加了神经网络绘图的宏包;
+                \end{itemize}
+
+            \end{block}
+        \end{frame}
 
     \section{已知问题}
             \begin{frame}[fragile]{已知问题}
