修改了timozercode, timozerfont的名字，新增了ttools

--- a/beamerthemeTIMOZER.sty
+++ b/beamerthemeTIMOZER.sty
@@ -17,8 +17,10 @@
 %\RequirePackage{appendixnumberbeamer} % Stops frame counting when the \appendix cmd is used
 \RequirePackage{etoolbox}
 \RequirePackage{tikz}
-%\RequirePackage{timozerfont}
-\RequirePackage{timozercode}
+\RequirePackage{graphicx}
+%\RequirePackage{tfont}
+\RequirePackage{tcode}
+\RequirePackage{ttools}
 \RequirePackage{nn}
 \RequirePackage[autoplay, autopause, autoresume]{animate}
 
