--- a/tcode.sty
+++ b/tcode.sty
@@ -4,14 +4,14 @@
 % vim: set fenc=utf-8
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  FileName: timozercode.sty
+%%  FileName: tcode.sty
 %%  Author:   Timozer
 %%  E-mail:   zhenyuwang94@gmail.com
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
-\ProvidesPackage{timozercode}[2018/02/03 v0.6 Source Code Environment]
+\ProvidesPackage{tcode}[2018/02/03 v0.6 Source Code Environment]
 \RequirePackage[newfloat=true, cachedir=./_minted-cache, langlinenos=true]{minted}
 % minted package options chapter, section, 
 \RequirePackage{xcolor}
