--- a/tfont.sty
+++ b/tfont.sty
@@ -5,14 +5,14 @@
 % vim: set fenc=utf-8
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  FileName: timozerfont.sty
+%%  FileName: tfont.sty
 %%  Author:   Timozer
 %%  E-mail:   zhenyuwang94@gmail.com
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
-\ProvidesPackage{timozerfont}[2018/02/02 v0.4 Provide Chinese Environment]
+\ProvidesPackage{tfont}[2018/02/02 v0.4 Provide Chinese Environment]
 
 \RequirePackage{fontspec}
 \RequirePackage{xeCJK}
@@ -27,23 +27,23 @@
 %\newCJKfontfamily[SmallCaps]\SCF{SmallCaps.otf}
 
 %%------------- Chinese Fonts  -------------
-\setCJKmainfont[ 
-        BoldFont = Hiragino Sans GB W6, ItalicFont = STKaiti
-    ]{FZShuSong-Z01S}
-\setCJKsansfont[
-    BoldFont = Hiragino Sans GB, 
-    SmallCapsFont={Fontin SmallCaps},
-    ]{Hiragino Sans GB}
-\setCJKmonofont{FZShuSong-Z01S}
+%\setCJKmainfont[ 
+        %BoldFont = Hiragino Sans GB W6, ItalicFont = STKaiti
+    %]{FZShuSong-Z01S}
+%\setCJKsansfont[
+    %BoldFont = Hiragino Sans GB, 
+    %SmallCapsFont={Fontin SmallCaps},
+    %]{Hiragino Sans GB}
+%\setCJKmonofont{FZShuSong-Z01S}
 
 %%------------- English Fonts  -------------
-\setmainfont[
-    ItalicFont = {Times New Roman Italic},
-    BoldFont = {Times New Roman Bold},
-    SmallCapsFont={Fontin SmallCaps},
-]{Times New Roman}
-\setsansfont[SmallCapsFont={Fontin SmallCaps}]{Optima}
-\setmonofont{Monaco}
+%\setmainfont[
+    %ItalicFont = {Times New Roman Italic},
+    %BoldFont = {Times New Roman Bold},
+    %SmallCapsFont={Fontin SmallCaps},
+%]{Times New Roman}
+%\setsansfont[SmallCapsFont={Fontin SmallCaps}]{Optima}
+%\setmonofont{Monaco}
 
 \def\timozer@def@fontsize#1#2{%
     \expandafter\newcommand\csname #1\endcsname[1][1.3]{%
@@ -66,7 +66,7 @@
 \newcommand{\xiaoer}{\LARGE}
 \newcommand{\xiaosan}{\Large}
 \newcommand{\xiaosi}{\large}
-\newcommand{\wuhao}{\normal}
+\newcommand{\wuhao}{\normalsize}
 \newcommand{\xiaowu}{\small}
 %\setlength{\parindent}{2em}
 \endinput
