--- a/beamerthemeTIMOZER.sty
+++ b/beamerthemeTIMOZER.sty
@@ -18,7 +18,7 @@
 \RequirePackage{etoolbox}
 \RequirePackage{tikz}
 \RequirePackage{graphicx}
-%\RequirePackage{tfont}
+\RequirePackage{tfont}
 \RequirePackage{tcode}
 \RequirePackage{ttools}
 \RequirePackage{nn}
@@ -147,10 +147,4 @@
 
 \def\mathfamilydefault{\rmdefault}
 \setbeamertemplate{caption}[numbered]
-\newcommand{\email}[1]{{\small \texttt{#1}}}
-\newcommand{\tthanks}{
-    \begin{center}
-        {\LARGE 谢谢}
-    \end{center}
-}
 \mode<all>
